Added Win/loss/tie   html/css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <h1>Tic Tac Toe</h1>
+    <div class="wlt">
+        <ul>
+            <li>Wins:</li>
+            <li>Losses:</li>
+            <li>Ties:</li>
+        </ul>
+    </div>
     <button class="main"></button>
     <button class="main"></button>
     <button class="main"></button>
