--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h1>Tic Tac Toe</h1>
     <div class="wlt">
         <ul>
-            <li>Wins:</li>
-            <li>Losses:</li>
+            <li>Player 1 Wins:</li>
+            <li>Player 2 Wins:</li>
             <li>Ties:</li>
         </ul>
     </div>
@@ -25,5 +25,37 @@
     <button class="main"></button>
     <button class="main"></button>
     <button class="main"></button>
+
+    <section class="board">
+        <div class="grid">
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+        </div>
+    </section>
 </body>
 </html>
