--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
+    <h1>TicTacToe</h1>
+    <p>Get Ready for the game of your life.</p>
+<div class="gameboard">
+<div class="container">
+    <div class="row">
+     <button class="main" id="1"></button>
+     <button class="main" id="2"></button>
+     <button class="main" id="3"></button>
+    </div>
+   <div class="row">
+    <button class="main" id="4"></button>
+    <button class="main" id="5"></button>
+    <button class="main" id="6"></button>
+   </div>
+  <div class="row">
+    <button class="main" id="7"></button>
+    <button class="main" id="8"></button>
+    <button class="main" id="9"></button>
+  </div>
+    
+</div>
+    <button class="restart">Restart</button>
+</div>
+
 </body>
 </html>
