--- a/index.html
+++ b/index.html
@@ -8,29 +8,54 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>TicTacToe</h1>
-    <p>Get Ready for the game of your life.</p>
-<div class="gameboard">
-<div class="container">
-    <div class="row">
-     <button class="main" id="1"></button>
-     <button class="main" id="2"></button>
-     <button class="main" id="3"></button>
+    <h1>Tic Tac Toe</h1>
+    <div class="wlt">
+        <ul>
+            <li>Player 1 Wins:</li>
+            <li>Player 2 Wins:</li>
+            <li>Ties:</li>
+        </ul>
     </div>
-   <div class="row">
-    <button class="main" id="4"></button>
-    <button class="main" id="5"></button>
-    <button class="main" id="6"></button>
-   </div>
-  <div class="row">
-    <button class="main" id="7"></button>
-    <button class="main" id="8"></button>
-    <button class="main" id="9"></button>
-  </div>
-    
-</div>
-    <button class="restart">Restart</button>
-</div>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
+    <button class="main"></button>
 
+    <section class="board">
+        <div class="grid">
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+            <div class="grid-square">
+                placeholder
+            </div>
+        </div>
+    </section>
 </body>
 </html>
