tested score, added scoreboard, added css

--- a/index.html
+++ b/index.html
@@ -11,21 +11,12 @@
     <h1>Tic Tac Toe</h1>
     <div class="wlt">
         <ul>
-            <li>Player 1 Wins:</li>
-            <li>Player 2 Wins:</li>
+            <ol>Score Board</ol>
+           <li>Player 1 Wins:</li>
+           <li>Player 2 Wins:</li>
             <li>Ties:</li>
         </ul>
     </div>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-    <button class="main"></button>
-
     <section class="board">
         <div class="grid">
             <div class="grid-square">
