--- a/index.html
+++ b/index.html
@@ -11,15 +11,23 @@
     <div class="wlt">
         <ul>
             <ol>Score Board</ol>
-           <li>Player 1 Wins:</li>
-           <li>Player 2 Wins:</li>
+            <li>Player 1 Wins:</li>
+            <li>Player 2 Wins:</li>
             <li>Ties:</li>
         </ul>
     </div>
+
+
+    <div class="player-turn">
+        Player 1
+    </div>
+
+
+    
     <section class="board">
         <div class="grid">
-            <div class="grid-square">
-                <p onclick="draw(this)"></p>
+            <div class="grid-square" onclick="draw(this)">
+
             </div>
             <div class="grid-square" onclick="draw(this)">
                 
